// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Component percent=0 时渲染结构快照 1`] = `
<div
  class="progress-container"
>
  <div
    class="progress-bar"
    style="height: 15px;"
  >
    <div
      class="progress-fill progress-fill-primary"
      style="width: 0%;"
    />
  </div>
</div>
`;

exports[`Progress Component 自定义 strokeHeight 渲染快照 1`] = `
<div
  class="progress-container"
>
  <div
    class="progress-bar"
    style="height: 20px;"
  >
    <div
      class="progress-fill progress-fill-success"
      style="width: 0%;"
    />
  </div>
</div>
`;
